--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,160 @@
 .App {
   font-family: 'Lato', sans-serif;
-
 }
-  
+
+.fa-circle {
+  color: #706982 !important;
+  /* float: right; */
+}
+
+.hide {
+  display: none !important;
+}
+
 .dock {
   position: fixed;
-  width: 200px;
-  padding-left: 75px;
+  width: 250px;
   padding-top: 100px;
   height: 100%;
-  background-color: #f5f5f5;
+  background-color: #16063d;
+  border-right: .5px solid #e3e3e3;
+  color: #9c93b5;
 }
 
 .dock-item {
-  padding: 7px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 7px 20px;
   cursor: pointer;
   transition-duration: .15s;
+  font-weight: 700;
 }
 
 .dock-item:hover {
-  background-color: white;
+  background-color: #392c59;
 }
 
 .dock-item-delete {
   float: right;
 }
 
+.add-list-form {
+  padding: 7px 20px;
+}
+
+.add-list-form>input {
+  width: 100%;  
+  font-size: 1em;
+  padding: 7px 0;
+  background-color: inherit;
+  border: none;
+  border-bottom: 2px solid #9c93b5;
+  color: #9c93b5;
+}
+
+.add-list-form>input:focus {
+  outline: 0;
+}
+
 .main {
-  margin-left: 350px;
+  padding-top: 20px;
+  margin-left: 275px;
+}
+
+.main-grid {
+  display: grid; 
+  grid-template-columns: repeat(3, 1fr);;
+  grid-gap: 30px 10px;
+}
+
+.main-grid-item {
+  width: 100%;
+  height: auto;
+}
+
+.main-grid-item>h3 {
+  margin-bottom: 7px;
+  cursor: pointer;
+}
+
+.todo-item {
+  list-style: none;
+  padding-left: 0 !important;
+  margin: 5px 0; 
+  cursor: pointer; 
+}
+
+.todo-item>div {
+
+}
+
+.todo-item>span {
+}
+
+.add-todo {
+  margin-top: 15px;
+}
+
+.add-todo-text {
+  display: flex;
+  align-items: baseline;
+  opacity: 40%;
+  cursor: pointer;
+  font-size: 0.8em;
+}
+
+.add-todo-text:hover {
+  opacity: 65%;
+}
+
+.add-todo-form>input {
+  font-size: 0.8em;
+  border: none;
+  border-bottom: 2px solid #16063d; 
+  padding-bottom: 5px;
+  margin-right: 15px;
+}
+
+.add-todo-form>input:focus {
+  outline: 0;
+}
+
+.add-todo-form>button {
+  margin-right: 5px;
+}
+
+.add-todo-form-add {
+  border: 2px solid #16063d;
+  color: #16063d;
+  border-radius: 10px;
+  padding: 3px 15px;
+  cursor: pointer;
+  font-weight: 700;
+  transition: 0.2s;
+}
+
+.disabled {
+  opacity: 50%;
+}
+
+.add-todo-form-add:hover {
+  color: white;
+  background-color: #16063d;
+}
+
+.disabled:hover {
+  color: #16063d;
+  background-color: white;
+}
+
+.add-todo-form-cancel {
+  border: none;
+  cursor: pointer;
+  font-weight: 700;
+  color: #fa6e64;
+}
+
+.add-todo-form-cancel:hover {
+  color: red;
 }
