--- a/src/App.css
+++ b/src/App.css
@@ -64,8 +64,9 @@
 
 .main-grid {
   display: grid; 
-  grid-template-columns: repeat(3, 1fr);;
-  grid-gap: 30px 10px;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 20px 10px;
+  margin-right: 50px;
 }
 
 .main-grid-item {
