--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
 .dock {
   position: fixed;
   width: 250px;
+  padding: 0 20px;
   padding-top: 100px;
   height: 100%;
   background-color: #16063d;
@@ -25,6 +26,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 0 -20px;
   padding: 7px 20px;
   cursor: pointer;
   transition-duration: .15s;
@@ -40,7 +42,7 @@
 }
 
 .add-list-form {
-  padding: 7px 20px;
+  padding: 7px 0px;
 }
 
 .add-list-form>input {
@@ -57,9 +59,28 @@
   outline: 0;
 }
 
+.changeListDisplays {
+  display: flex;
+  justify-content: space-around;
+  margin: 20px 0;
+}
+
+.changeListDisplays>button {
+  border: 2px solid #9c93b5;
+  border-radius: 10px;
+  background-color: inherit;
+  color: #9c93b5;
+  font-weight: 700;
+  font-size: 0.75em;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.changeListDisplays>button:focus {outline: 0}
+
 .main {
   padding-top: 20px;
-  margin-left: 275px;
+  margin-left: 315px;
 }
 
 .main-grid {
