added moment, created basic calendar layout, highlights current day

--- a/src/TodoCalendar.css
+++ b/src/TodoCalendar.css
@@ -1,9 +1,34 @@
 .add-todo-calendar {
   position: absolute;
-  width: 200px;
-  height: 100px;
-  background-color: yellow;
+  width: 300px;
   z-index: 1;
   cursor: default;
+  background-color: white;
   /* transform: translateX(40%); */
+  border: 1px solid grey;
+  padding: 5px;
+}
+
+.day-of-week,
+.date-grid {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+}
+
+.day-of-week>div {
+  font-size: 0.7em;
+  font-weight: 700;
+  text-align: center;
+}
+
+.date-grid button {
+  position: relative;
+  border: 0;
+  height: 4.5ch;
+  border-radius: 50%;
+  background-color: transparent;
+}
+
+.currentDay {
+  color: pink;
 }
