--- a/src/App.css
+++ b/src/App.css
@@ -80,19 +80,21 @@
 
 .main {
   padding-top: 20px;
-  margin-left: 315px;
+  margin-left: 340px;
+  margin-right: 50px;
+  max-width: 700px;
 }
 
 .main-grid {
   display: grid; 
   grid-template-columns: repeat(1, 1fr);
   grid-gap: 20px 10px;
-  margin-right: 50px;
 }
 
 .main-grid-item {
   width: 100%;
   height: auto;
+  /* background-color: green; */
 }
 
 .main-grid-item>h3 {
