--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+:root {
+  --body-background-color: #111111;
+  --dock-todo-background-color: #1b1b1b;
+  --dock-display-circle-color: #706982;
+  --dock-hover-color: #2c2c2c;
+  --font-color: #a0a0a0;
+  --cancel-button-color: #fa6e64;
+  --calendar-selected-background-color: orange;
+  --calendar-selected-font-color: white;
+
+
+
+}
+
 .App {
   font-family: 'Lato', sans-serif;
 }
@@ -7,15 +21,19 @@ body {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg fill-opacity='0.03'%3E%3Cpath fill='%23ffb100' d='M486 705.8c-109.3-21.8-223.4-32.2-335.3-19.4C99.5 692.1 49 703 0 719.8V800h843.8c-115.9-33.2-230.8-68.1-347.6-92.2C492.8 707.1 489.4 706.5 486 705.8z'/%3E%3Cpath fill='%23ffb800' d='M1600 0H0v719.8c49-16.8 99.5-27.8 150.7-33.5c111.9-12.7 226-2.4 335.3 19.4c3.4 0.7 6.8 1.4 10.2 2c116.8 24 231.7 59 347.6 92.2H1600V0z'/%3E%3Cpath fill='%23ffbf00' d='M478.4 581c3.2 0.8 6.4 1.7 9.5 2.5c196.2 52.5 388.7 133.5 593.5 176.6c174.2 36.6 349.5 29.2 518.6-10.2V0H0v574.9c52.3-17.6 106.5-27.7 161.1-30.9C268.4 537.4 375.7 554.2 478.4 581z'/%3E%3Cpath fill='%23ffc500' d='M0 0v429.4c55.6-18.4 113.5-27.3 171.4-27.7c102.8-0.8 203.2 22.7 299.3 54.5c3 1 5.9 2 8.9 3c183.6 62 365.7 146.1 562.4 192.1c186.7 43.7 376.3 34.4 557.9-12.6V0H0z'/%3E%3Cpath fill='%23ffcc00' d='M181.8 259.4c98.2 6 191.9 35.2 281.3 72.1c2.8 1.1 5.5 2.3 8.3 3.4c171 71.6 342.7 158.5 531.3 207.7c198.8 51.8 403.4 40.8 597.3-14.8V0H0v283.2C59 263.6 120.6 255.7 181.8 259.4z'/%3E%3Cpath fill='%23ffd624' d='M1600 0H0v136.3c62.3-20.9 127.7-27.5 192.2-19.2c93.6 12.1 180.5 47.7 263.3 89.6c2.6 1.3 5.1 2.6 7.7 3.9c158.4 81.1 319.7 170.9 500.3 223.2c210.5 61 430.8 49 636.6-16.6V0z'/%3E%3Cpath fill='%23ffe038' d='M454.9 86.3C600.7 177 751.6 269.3 924.1 325c208.6 67.4 431.3 60.8 637.9-5.3c12.8-4.1 25.4-8.4 38.1-12.9V0H288.1c56 21.3 108.7 50.6 159.7 82C450.2 83.4 452.5 84.9 454.9 86.3z'/%3E%3Cpath fill='%23ffeb49' d='M1600 0H498c118.1 85.8 243.5 164.5 386.8 216.2c191.8 69.2 400 74.7 595 21.1c40.8-11.2 81.1-25.2 120.3-41.7V0z'/%3E%3Cpath fill='%23fff558' d='M1397.5 154.8c47.2-10.6 93.6-25.3 138.6-43.8c21.7-8.9 43-18.8 63.9-29.5V0H643.4c62.9 41.7 129.7 78.2 202.1 107.4C1020.4 178.1 1214.2 196.1 1397.5 154.8z'/%3E%3Cpath fill='%23ffff66' d='M1315.3 72.4c75.3-12.6 148.9-37.1 216.8-72.4h-723C966.8 71 1144.7 101 1315.3 72.4z'/%3E%3C/g%3E%3C/svg%3E");
   background-attachment: fixed;
   background-size: cover; */
-  background-color: black;
+  background-color: var(--body-background-color);
 }
 .fa-circle {
-  color: #706982 !important;
+  color: var(--dock-display-circle-color) !important;
   /* float: right; */
 }
 
 .hide {
   display: none !important;
+}
+
+.not-visible {
+  visibility: hidden !important;
 }
 
 .dock {
@@ -24,8 +42,8 @@ body {
   padding: 0 20px;
   padding-top: 100px;
   height: 100%;
-  background-color: #111111;
-  color: #a0a0a0;
+  background-color: var(--dock-todo-background-color);
+  color: var(--font-color);
 }
 
 .dock-item {
@@ -39,7 +57,7 @@ body {
 }
 
 .dock-item:hover {
-  background-color: #2c2c2c;
+  background-color: var(--dock-hover-color);
 }
 
 .dock-item-delete {
@@ -56,8 +74,8 @@ body {
   padding: 7px 0;
   background-color: inherit;
   border: none;
-  border-bottom: 2px solid #a0a0a0;
-  color: #a0a0a0;
+  border-bottom: 2px solid var(--font-color);
+  color: var(--font-color);
 }
 
 .add-list-form>input:focus {
@@ -71,10 +89,10 @@ body {
 }
 
 .changeListDisplays>button {
-  border: 2px solid #a0a0a0;
+  border: 2px solid var(--font-color);
   border-radius: 10px;
   background-color: inherit;
-  color: #a0a0a0;
+  color: var(--font-color);
   font-weight: 700;
   font-size: 0.75em;
   padding: 10px;
@@ -100,7 +118,7 @@ body {
 .main-grid-item {
   width: 100%;
   height: auto;
-  color: #a0a0a0;
+  color: var(--font-color);
   /* background-color: green; */
 }
 
@@ -110,16 +128,17 @@ body {
 }
 
 .main-grid-item-todos {
-  background-color: #111111;
+  background-color: var(--dock-todo-background-color);
   padding: 10px 30px;
   border-radius: 15px;
 }
 
 .todo-item {
-  list-style: none;
-  padding-left: 0 !important;
   margin: 15px 0; 
   cursor: pointer; 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .todo-item-date {
@@ -148,9 +167,11 @@ body {
 .add-todo-form>input {
   font-size: 0.8em;
   border: none;
-  border-bottom: 2px solid #16063d; 
+  border-bottom: 2px solid var(--font-color); 
   padding-bottom: 5px;
+  background-color: inherit;
   margin-right: 15px;
+  color: var(--font-color);
 }
 
 .add-todo-form>input:focus {
@@ -158,6 +179,7 @@ body {
 }
 
 .add-todo-form>button {
+  background-color: inherit;
   margin-right: 5px;
 }
 
@@ -193,9 +215,91 @@ body {
   border: none;
   cursor: pointer;
   font-weight: 700;
-  color: #fa6e64;
+  color: var(--cancel-button-color);
 }
 
 .add-todo-form-cancel:hover {
-  color: red;
+  color: var(--cancel-button-color);
+}
+
+.fa-calendar {
+  border-radius: 5px;
+  padding: 7px;
+}
+
+.fa-calendar:hover{
+  background-color: var(--dock-hover-color);
+}
+
+.add-todo-calendar {
+  position: absolute;
+  /* width: 300px; */
+  z-index: 1;
+  cursor: default;
+  background-color: #141414;
+  transform: translateX(-70%);
+  border-radius: 10px;
+  padding: 5px;
+  color: var(--font-color);
+}
+
+.month-indicator {
+  display: flex;
+  justify-content: space-between;
+  font-weight: 700;
+  margin-top: .5em;
+  margin-bottom: 1em;
+  padding: 0 30px;
+}
+
+.month-indicator>button {
+  background-color: inherit;
+  color: inherit;
+  border: 0;
+  cursor: pointer;
+}
+
+.day-of-week,
+.date-grid {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-gap: 3px;
+}
+
+.day-of-week {
+  margin-bottom: 10px;
+}
+
+.day-of-week>div {
+  font-size: 0.7em;
+  font-weight: 500;
+  text-align: center;
+}
+
+.date-grid button {
+  color: inherit;
+  position: relative;
+  border: 0;
+  border-radius: 10%;
+  height: 4.5ch;
+  width: 4.5ch;
+  margin: 0 auto;
+  cursor: pointer;
+  font-weight: 700;
+  background-color: inherit;
+}
+
+.date-grid button:hover {
+  background-color: var(--dock-hover-color);
+}
+
+.date-grid button:focus {outline: 0}
+
+.currentDay {
+  color: var(--calendar-selected-background-color); 
+}
+
+.selectedDay {
+  background-color: var(--calendar-selected-background-color) !important;
+  color: var(--calendar-selected-font-color) !important;
 }
