--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,6 @@
   --cancel-button-color: #fa6e64;
   --calendar-selected-background-color: orange;
   --calendar-selected-font-color: white;
-
-
-
 }
 
 .App {
@@ -36,6 +33,10 @@ body {
   visibility: hidden !important;
 }
 
+.hover-background:hover {
+  background-color: var(--dock-hover-color);
+}
+
 .dock {
   position: fixed;
   width: 275px;
@@ -54,10 +55,6 @@ body {
   padding: 7px 20px;
   cursor: pointer;
   transition-duration: .15s;
-}
-
-.dock-item:hover {
-  background-color: var(--dock-hover-color);
 }
 
 .dock-item-delete {
@@ -123,7 +120,10 @@ body {
 }
 
 .main-grid-item-header {
-  margin-bottom: 1em;
+  display: inline-block;
+  margin-bottom: 0.75em;
+  padding: 7px 20px;
+  border-radius: 10px;
   cursor: pointer;
 }
 
@@ -162,6 +162,10 @@ body {
 
 .add-todo-text:hover {
   opacity: 65%;
+}
+
+.add-todo-form {
+  margin: 15px 0; 
 }
 
 .add-todo-form>input {
@@ -219,16 +223,12 @@ body {
 }
 
 .add-todo-form-cancel:hover {
-  color: var(--cancel-button-color);
+  color: red;
 }
 
 .fa-calendar {
   border-radius: 5px;
   padding: 7px;
-}
-
-.fa-calendar:hover{
-  background-color: var(--dock-hover-color);
 }
 
 .add-todo-calendar {
@@ -240,15 +240,17 @@ body {
   transform: translateX(-70%);
   border-radius: 10px;
   padding: 5px;
+  padding-bottom: 15px;
   color: var(--font-color);
 }
 
 .month-indicator {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-weight: 700;
-  margin-top: .5em;
-  margin-bottom: 1em;
+  margin-top: 0.25em;
+  margin-bottom: 0.5em;
   padding: 0 30px;
 }
 
@@ -256,6 +258,8 @@ body {
   background-color: inherit;
   color: inherit;
   border: 0;
+  padding: 10px;
+  border-radius: 10px;
   cursor: pointer;
 }
 
@@ -264,6 +268,7 @@ body {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   grid-gap: 3px;
+  margin-bottom: 10px;
 }
 
 .day-of-week {
@@ -289,17 +294,21 @@ body {
   background-color: inherit;
 }
 
-.date-grid button:hover {
-  background-color: var(--dock-hover-color);
-}
-
 .date-grid button:focus {outline: 0}
 
 .currentDay {
-  color: var(--calendar-selected-background-color); 
+  color: var(--calendar-selected-background-color) !important; 
 }
 
 .selectedDay {
   background-color: var(--calendar-selected-background-color) !important;
   color: var(--calendar-selected-font-color) !important;
+}
+
+.remove-date {
+  font-size: .7em; 
+  font-weight: 700;
+  margin: 10px;
+  color: var(--cancel-button-color);
+  cursor: pointer;
 }
